crates/emitter-client/tests/snapshots/snapshots__snapshot_header_cookie_params_custom_client.snap
---
source: crates/emitter-client/tests/snapshots.rs
expression: output
---
// Generated by oa-forge. Do not edit.

import type { listResourcesQueryParams, listResourcesHeaderParams, listResourcesResponse, getResourcePathParams, getResourceHeaderParams, getResourceCookieParams, getResourceResponse } from './types.gen';

export type CustomClient = (
  method: string,
  url: string,
  options?: {
    headers?: Record<string, string>;
    body?: unknown;
    signal?: AbortSignal;
  },
) => Promise<unknown>;

type ArrayStyle = 'comma' | 'multi' | 'brackets';

function buildQuery(
  params?: Record<string, unknown>,
  arrayStyles?: Record<string, ArrayStyle>,
): string {
  if (!params) return '';
  const parts: string[] = [];
  for (const [key, value] of Object.entries(params)) {
    if (value === undefined) continue;
    if (Array.isArray(value)) {
      const style = arrayStyles?.[key] ?? 'multi';
      if (style === 'comma') {
        parts.push(`${encodeURIComponent(key)}=${value.map(v => encodeURIComponent(String(v))).join(',')}`);
      } else if (style === 'brackets') {
        for (const v of value) parts.push(`${encodeURIComponent(key + '[]')}=${encodeURIComponent(String(v))}`);
      } else {
        for (const v of value) parts.push(`${encodeURIComponent(key)}=${encodeURIComponent(String(v))}`);
      }
    } else {
      parts.push(`${encodeURIComponent(key)}=${encodeURIComponent(String(value))}`);
    }
  }
  return parts.length > 0 ? '?' + parts.join('&') : '';
}

export function listResources(client: CustomClient, queryParams?: listResourcesQueryParams, headerParams: listResourcesHeaderParams): Promise<listResourcesResponse> {
  return client('GET', `/resources${buildQuery(queryParams as Record<string, unknown>)}`, {
    headers: { ...headerParams as Record<string, string> },
  }) as Promise<listResourcesResponse>;
}

export function getResource(client: CustomClient, pathParams: getResourcePathParams, headerParams: getResourceHeaderParams, cookieParams: getResourceCookieParams): Promise<getResourceResponse> {
  return client('GET', `/resources/${pathParams.resourceId}`, {
    headers: { ...headerParams as Record<string, string>, Cookie: Object.entries(cookieParams).filter(([, v]) => v !== undefined).map(([k, v]) => `${k}=${v}`).join('; ') },
  }) as Promise<getResourceResponse>;
}
